hw-03/answer_exercise_1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-server
  ports:
    - protocol: TCP
      port: 80

---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-service
#spec:
#  type: LoadBalancer
#  selector:
#    app: nginx-server
#  ports:
#    - port: 80
#      protocol: TCP
#      targetPort: 80
