hw-03/answer_exercise_1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "luis.student.lasalle.com"
      secretName: secret-tls
  rules:
    - host: "luis.student.lasalle.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: nginx-service
              servicePort: 80
